# shroomery

./: README.md  TODO.md  Taskfile.yaml  main.py  pyproject.toml
docs/grow-docs/: maitake.md  oyster.md
shroomery/: api.py  config.py  database.py  sql.py
shroomery/models/: __init__.py  sql.py
