[project]
name = "shroomery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-dht>=4.0.9",
    "fastapi>=0.115.14",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.0",
]
