[project]
name = "shroomery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-dht>=4.0.9",
    "fastapi>=0.115.14",
    "gpiozero>=2.0.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "sensirion-i2c-sht4x>=1.1.0",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
